# vag-mcp-chat

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml  helm-publish.yml  test.yml
agent/: chat.py  main.py  mcp_client.py
docs/: vw-oidc-setup.md
helm/vag-mcp-chat/: Chart.yaml  values.yaml
helm/vag-mcp-chat/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
server/: __init__.py  main.py  mcp_app.py  settings.py  setup.py  state.py
server/auth/: token_store.py  vw_oidc.py
server/tools/: __init__.py  battery.py  charging.py  climate.py  location.py  summary.py
server/vw/: client.py  models.py  parser.py  poller.py
server/web/: chat.py  index.html
tests/: conftest.py  test_parser.py  test_tools.py
