[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vag-mcp-chat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.0.0",
    "authlib>=1.3.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.41.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["server", "agent"]
